%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
\newcommand{\MPR}{\pkg{Matrix} \href{https://R-forge.R-project.org/tracker/index.php?func=detail&aid=#1&group_id=61&atid=294}{PR##1}}
\section{Changes in version 1.8-0 (2026-02-12, svn r5187)}{
  \subsection{Installation}{
    \itemize{
      \item \pkg{Matrix} \eqn{\ge}{>=} 1.8-0 depends on \R{}
      \eqn{\ge}{>=} 4.5.

      \item Compilation uses preprocessor options
      \option{-DSTRICT_R_HEADERS}, \option{-DR_NO_REMAP}, and
      \option{-DR_NO_REMAP_RMATH}.

      \item Warnings surfaced by \option{-Wconversion} (but not those
      originating in SuiteSparse) are squashed.
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item Coercions to \code{dpoMatrix} or \code{dppMatrix} are
      deprecated.  Coerce to new virtual class \code{posdefMatrix}
      instead.
    }
  }
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Methods for \code{cov2cor} coerce the (symmetrized) argument
      to new virtual class \code{posdefMatrix} before scaling.  Hence an
      error is signaled where the (symmetrized) argument is not positive
      definite.  Use \code{dimScale} (introduced in \pkg{Matrix} 1.5-2)
      for more general scaling.

      \item \code{<Matrix> + <0-length-vector>} and other such zero-extent
      arithmetic (\code{Arith}) or more general binary operations
      (\code{Ops}) now behave \pkg{base} \R compatibly in returning a
      zero-length vector or matrix, respectively.

      \item Similarly, \code{<Matrix> o <Matrix>} operations now also error
      when the matrix dimensions do not match exactly, as it has been in \R
      for several years.  Previously, only \code{nrow(.)} needed to match
      for the two matrices.

      \item Methods for \code{\%*\%}, \code{crossprod}, and